<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_weight="1"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_1"
        android:textSize="18sp"
        android:labelFor="@id/question_1"
        android:fontFamily="sans-serif-condensed-medium" />

    <RadioGroup
        android:layout_weight="1"
        android:id="@+id/question_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/yes"
            android:layout_weight="1"
            android:textSize="16sp"></RadioButton>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/no"
            android:textSize="16sp"></RadioButton>
    </RadioGroup> <TextView
    android:layout_weight="1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/question_2"
    android:textSize="18sp"
    android:labelFor="@id/question_2"
    android:fontFamily="sans-serif-condensed-medium"
    />

    <RadioGroup
        android:layout_weight="1"
        android:id="@+id/question_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/yes"
            android:layout_weight="1"
            android:textSize="16sp"></RadioButton>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/no"
            android:textSize="16sp"></RadioButton>
    </RadioGroup> <TextView  android:layout_weight="1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/question_3"
    android:textSize="18sp"
    android:labelFor="@id/question_3"
    android:fontFamily="sans-serif-condensed-medium"
    />

    <RadioGroup
        android:layout_weight="1"
        android:id="@+id/question_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/yes"
            android:layout_weight="1"
            android:textSize="16sp"></RadioButton>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/no"
            android:textSize="16sp"></RadioButton>
    </RadioGroup>
    <TextView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_4"
        android:textSize="18sp"
        android:labelFor="@id/question_4"
        android:fontFamily="sans-serif-condensed-medium"
        />

    <RadioGroup
        android:layout_weight="1"
        android:id="@+id/question_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/yes"
            android:layout_weight="1"
            android:textSize="16sp"></RadioButton>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/no"
            android:textSize="16sp"></RadioButton>
    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_5"
        android:textSize="18sp"
        android:layout_weight="1"
        android:labelFor="@id/question_5"
        android:fontFamily="sans-serif-condensed-medium"
        />

    <RadioGroup
        android:layout_weight="1"
        android:id="@+id/question_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/yes"
            android:layout_weight="1"
            android:textSize="16sp"></RadioButton>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/no"
            android:textSize="16sp"></RadioButton>
    </RadioGroup>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Analyse Risk"
        android:gravity="center"
        android:textSize="10sp"
        android:id="@+id/analyse_button"
    />
</LinearLayout>